--- a/src/sample/View/main.fxml
+++ b/src/sample/View/main.fxml
@@ -1,12 +1,21 @@
+
+
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.GridPane?>
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.HBox?>
 
-    <Label>Test</Label>
-
-
+<GridPane xmlns:fx="http://javafx.com/fxml" fx:controller="sample.MainController" hgap="10" vgap="10">
+    <TextArea GridPane.rowIndex="1" />
+    <HBox spacing="10" alignment="bottom_right" GridPane.rowIndex="4">
+        <GridPane.margin>
+            <Insets right="20" />
+        </GridPane.margin>
+        <Button fx:id="histogramBtn" text="Histogram" onAction="#createHistogram" />
+        <Button fx:id="importBtn" text="Importuj tekst" onAction="#importFile" />
+    </HBox>
 </GridPane>
+
