--- a/src/histogram/View/main.fxml
+++ b/src/histogram/View/main.fxml
@@ -3,12 +3,10 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.text.Font?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.HBox?>
 
-<GridPane xmlns:fx="http://javafx.com/fxml" fx:controller="sample.MainController" hgap="10" vgap="10">
+<GridPane xmlns:fx="http://javafx.com/fxml" fx:controller="histogram.Controller.MainController" hgap="10" vgap="10">
     <TextArea GridPane.rowIndex="1" />
     <HBox spacing="10" alignment="bottom_right" GridPane.rowIndex="4">
         <GridPane.margin>
