--- a/src/histogram/View/main.fxml
+++ b/src/histogram/View/main.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.HBox?>
 
 <GridPane xmlns:fx="http://javafx.com/fxml" fx:controller="histogram.Controller.MainController" hgap="10" vgap="10">
-    <TextArea GridPane.rowIndex="1" />
+    <TextArea fx:id="textForm" GridPane.rowIndex="1" />
     <HBox spacing="10" alignment="bottom_right" GridPane.rowIndex="4">
         <GridPane.margin>
             <Insets right="20" />
