--- a/src/histogram/View/preview.fxml
+++ b/src/histogram/View/preview.fxml
@@ -5,9 +5,24 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.HBox?>
-
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.text.Text?>
+
+<?import javafx.scene.paint.Color?>
 <GridPane xmlns:fx="http://javafx.com/fxml" fx:controller="histogram.Controller.PreviewController" hgap="10" vgap="10">
+
+
+    <Text fx:id="textForm" disable="true" GridPane.rowIndex="1" GridPane.columnIndex="2"  />
+
+
+    <HBox spacing="5" alignment="bottom_right" GridPane.rowIndex="4"  GridPane.columnIndex="4">
+
+        <Button fx:id="histogramBtn" text="Zapisz"  />
+        <Button fx:id="importBtn" text="Sortuj" />
+    </HBox>
+
+
+
 
 </GridPane>
 
