--- a/src/histogram/View/preview.fxml
+++ b/src/histogram/View/preview.fxml
@@ -1,25 +1,22 @@
 
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.text.Text?>
 
-<?import javafx.scene.paint.Color?>
-<GridPane xmlns:fx="http://javafx.com/fxml" fx:controller="histogram.Controller.PreviewController" hgap="10" vgap="10">
+<?import javafx.scene.control.ScrollPane?>
+<GridPane fx:id="container" xmlns:fx="http://javafx.com/fxml" fx:controller="histogram.Controller.PreviewController" hgap="10" vgap="10">
 
+    <HBox spacing="5"  GridPane.rowIndex="2" >
 
-    <Text fx:id="textForm" disable="true" GridPane.rowIndex="1" GridPane.columnIndex="2"  />
-
-
-    <HBox spacing="5" alignment="bottom_right" GridPane.rowIndex="4"  GridPane.columnIndex="4">
-
-        <Button fx:id="histogramBtn" text="Zapisz"  />
-        <Button fx:id="importBtn" text="Sortuj" />
+        <Button text="Zapisz"  />
+        <Button text="Sortuj" />
     </HBox>
+
+    <ScrollPane  GridPane.rowIndex="1" >
+    <Text fx:id="textForm" disable="true"  />
+    </ScrollPane>
 
 
 
