--- a/src/histogram/View/main.fxml
+++ b/src/histogram/View/main.fxml
@@ -6,7 +6,8 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.HBox?>
 
-<GridPane xmlns:fx="http://javafx.com/fxml" fx:controller="histogram.Controller.MainController" hgap="10" vgap="10">
+
+<GridPane fx:id="gp" xmlns:fx="http://javafx.com/fxml" fx:controller="histogram.Controller.MainController" hgap="10" vgap="10">
     <TextArea fx:id="textForm" GridPane.rowIndex="1" />
     <HBox spacing="10" alignment="bottom_right" GridPane.rowIndex="4">
         <GridPane.margin>
@@ -15,5 +16,6 @@
         <Button fx:id="histogramBtn" text="Histogram" onAction="#createHistogram" />
         <Button fx:id="importBtn" text="Importuj tekst" onAction="#importFile" />
     </HBox>
+
 </GridPane>
 
