--- a/src/histogram/View/preview.fxml
+++ b/src/histogram/View/preview.fxml
@@ -2,19 +2,15 @@
 
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.control.ScrollPane?>
 
 <GridPane fx:id="container" xmlns:fx="http://javafx.com/fxml" fx:controller="histogram.Controller.PreviewController" hgap="10" vgap="10">
 
-    <HBox spacing="5"  GridPane.rowIndex="2" >
 
-        <Button text="Zapisz"  />
-        <Button text="Sortuj" onAction="#sort" />
-    </HBox>
+        <Button text="Zapisz" GridPane.rowIndex="2" GridPane.columnIndex="1"  />
 
-    <ScrollPane  GridPane.rowIndex="1" >
+    <ScrollPane  GridPane.rowIndex="1" GridPane.columnSpan="8" GridPane.columnIndex="1"  GridPane.fillWidth="true" >
     <Text fx:id="textForm" disable="true"  />
     </ScrollPane>
 
