--- a/src/histogram/View/preview.fxml
+++ b/src/histogram/View/preview.fxml
@@ -5,10 +5,10 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.control.ScrollPane?>
 
-<GridPane fx:id="container" xmlns:fx="http://javafx.com/fxml" fx:controller="histogram.Controller.PreviewController" hgap="10" vgap="10">
+<GridPane fx:id="gp" xmlns:fx="http://javafx.com/fxml" fx:controller="histogram.Controller.PreviewController" hgap="10" vgap="10">
 
 
-        <Button text="Zapisz" GridPane.rowIndex="2" GridPane.columnIndex="1"  />
+        <Button fx:id="saveBtn"  text="Zapisz" GridPane.rowIndex="2" GridPane.columnIndex="1"  onAction="#saveFile"/>
 
     <ScrollPane  GridPane.rowIndex="1" GridPane.columnSpan="8" GridPane.columnIndex="1"  GridPane.fillWidth="true" >
     <Text fx:id="textForm" disable="true"  />
